@@ -152,6 +152,8 @@ be printed to STDERR.
 .IP "-R, --recursive"
 Recursively list the elements of the group.
 
+.IP "-f, --flatten"
+Flattens the output to single lines. When this option is enabled, subgroups and subentries will be displayed with a relative group path instead of indentation.
 
 .SS "Generate options"
 
