@@ -45,7 +45,8 @@ private slots:
     void testIsRecycled();
     void testCopyDataFrom();
     void testEquals();
-    void sortChildrenRecursively();
+    void testChildrenSort();
+    void testHierarchy();
 };
 
 #endif // KEEPASSX_TESTGROUP_H
